<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/profileDetailsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileUserPhoto"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_gravity="center"
            android:clickable="true"
            app:srcCompat="@drawable/usericon" />

        <TextView
            android:id="@+id/userProfileNameUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/profile_name_vendor"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/profileUserAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_address"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/profileEdit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="#008800"

            android:text="@string/edit_profile" />

        <Button
            android:id="@+id/profileContacts"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:backgroundTint="#008800"
            android:text="@string/view_contacts" />
    </LinearLayout>

    <Button
        android:id="@+id/toShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#008800"
        android:text="@string/view_shop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileDetailsContainer"
        app:layout_constraintVertical_bias="0.063" />

</androidx.constraintlayout.widget.ConstraintLayout>