<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPWConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:background="#2AA4A4A4">

    <EditText
        android:id="@+id/forgotPWemailAddress"
        android:layout_width="300dp"
        android:layout_height="33dp"
        android:layout_marginBottom="304dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/email_address_string"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#D8474646"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpw_display"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/forgotpw_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password_string"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPwImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/forgotpw_instruct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="12dp"
        android:text="@string/reset_pw_instruct"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPWemailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPwImage"
        app:layout_constraintVertical_bias="0.683" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#008800"
        android:text="@string/reset_my_password_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPWemailAddress"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/resetSuccessPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="95"
        android:background="#CC000000"
        android:padding="25dp"
        android:text="@string/reset_pw_success_string"
        android:textAlignment="center"
        android:textColor="#30FF01"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/resetFailPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="95"
        android:background="#CC000000"
        android:padding="25dp"
        android:text="@string/enter_valid_email_string"
        android:textAlignment="center"
        android:textColor="#30FF01"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/forgotPwImage"
        android:layout_width="258dp"
        android:layout_height="82dp"
        android:alpha="50"
        android:contentDescription="@string/veggielogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/veg_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>